// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<Fragment>
  <MapMarker
    autoOpen={false}
    draggable={false}
    key="post-marker-100"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    popup={
      <ForwardRef(Box)
        className="popup-content"
      >
        <Renderer
          marker={100}
        />
        <ForwardRef(Box)
          sx={
            Object {
              "mt": 2,
              "textAlign": "right",
            }
          }
        >
          <ForwardRef(Button)
            onClick={[Function]}
            startIcon={<Memo />}
          >
            投稿を追加する
          </ForwardRef(Button)>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
  <MapMarker
    autoOpen={false}
    draggable={false}
    key="post-marker-101"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    popup={
      <ForwardRef(Box)
        className="popup-content"
      >
        <Renderer
          marker={101}
        />
        <ForwardRef(Box)
          sx={
            Object {
              "mt": 2,
              "textAlign": "right",
            }
          }
        >
          <ForwardRef(Button)
            onClick={[Function]}
            startIcon={<Memo />}
          >
            投稿を追加する
          </ForwardRef(Button)>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
</Fragment>
`;

exports[`Shallow Snapshot Tests form is editting 1`] = `
<Fragment>
  <MapMarker
    autoOpen={false}
    draggable={false}
    key="post-marker-100"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    popup={
      <ForwardRef(Box)
        className="popup-content"
      >
        <Renderer
          marker={100}
        />
      </ForwardRef(Box)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
  <MapMarker
    autoOpen={false}
    draggable={false}
    key="post-marker-101"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    popup={
      <ForwardRef(Box)
        className="popup-content"
      >
        <Renderer
          marker={101}
        />
      </ForwardRef(Box)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
</Fragment>
`;

exports[`Shallow Snapshot Tests with hiddenMarkerIds 1`] = `
<Fragment>
  <MapMarker
    autoOpen={false}
    draggable={false}
    key="post-marker-101"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    popup={
      <ForwardRef(Box)
        className="popup-content"
      >
        <Renderer
          marker={101}
        />
        <ForwardRef(Box)
          sx={
            Object {
              "mt": 2,
              "textAlign": "right",
            }
          }
        >
          <ForwardRef(Button)
            onClick={[Function]}
            startIcon={<Memo />}
          >
            投稿を追加する
          </ForwardRef(Button)>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
</Fragment>
`;
